basic touchmove concept, when we scroll up, make sure the main body and html scroll all the way down and vice versa.  Next todo is to smooth out the scroll jumps when the body and html hit the elastic threshold, causing touch direction to return up, down, up, down which adds to the flicker

--- a/modules/oxide/src/less/theme/components/fullscreen/fullscreen.less
+++ b/modules/oxide/src/less/theme/components/fullscreen/fullscreen.less
@@ -32,3 +32,23 @@
     z-index: @z-index-fullscreen + 1;
   }
 }
+
+body.tox-fullscreen,
+html.tox-fullscreen {
+  bottom: 0;
+  height: 100%;
+  left: 0;
+  min-height: 100%;
+  overflow: hidden;
+  position: fixed;
+  right: 0;
+  top: 0;
+}
+
+div.tox-edit-area {
+  position: absolute;
+}
+
+html {
+  background-color: red;
+}
